# Space-voice

./: .gitignore  CERTIFICATE_OF_READINESS.md  DEPLOYMENT.md  INTERNAL_MODULE_PLAN.md  MODELS.md  PLAN-embeddable-widget.md  QUICK_START_TESTING.md  SpaceVoice.md  TESTING_README.md  TEST_STRATEGY.md  TEST_SUMMARY.md  run_tests.sh  tasks.md  widget.md
.claude/agents/: qa-tester.md
backend/: .dockerignore  .env.production.example  Dockerfile  README.md  agent_create.json  gunicorn.conf.py  pyproject.toml  railway.toml
backend/.claude/agents/: frontend-architect.md
backend/app/: main.py
backend/app/api/: admin.py  agents.py  auth.py  calls.py  campaigns.py  crm.py  demo.py  embed.py  health.py  integration_api.py  integrations.py  oauth.py  onboarding.py  phone_numbers.py  phone_numbers_purchase.py  realtime.py  retell_webhooks.py  retell_ws.py  revenue.py  settings.py  telephony.py  telephony_ws.py  telnyx_webhooks.py  tools.py  workspaces.py
backend/app/core/: audit.py  auth.py  cache.py  config.py  public_id.py  webhook_security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/middleware/: request_tracing.py
backend/app/models/: __init__.py  access_token.py  agent.py  appointment.py  call_interaction.py  call_record.py  campaign.py  phone_number.py  pricing_config.py  user.py  user_integration.py  user_settings.py
backend/app/scripts/: __init__.py  seed_demo.py
backend/app/services/: campaign_worker.py  gpt_realtime.py  seed_calls.py
backend/app/services/retell/: __init__.py  claude_adapter.py  openai_adapter.py  retell_llm_server.py  retell_service.py  tool_converter.py
backend/app/services/telephony/: telnyx_service.py
backend/app/services/tools/: crm_tools.py  google_calendar_tools.py  hvac_triage_tools.py  jobber_tools.py  registry.py  sms_tools.py
backend/migrations/versions/: 002_add_crm_models.py  012_add_production_indexes.py  014_add_embed_settings.py  015_add_retell_voice_provider.py  016_add_retell_response_timing.py  017_add_access_tokens.py  3ec8f7908c3c_add_pricing_config_table.py  4238d067155a_add_user_onboarding_fields.py  95e55d624d3e_add_client_id_field.py  bfb7493e2e0e_add_use_platform_ai_to_users.py  c1a2629e6aad_add_initial_greeting_to_agents.py  d5d6c771f2f0_add_revenue_fields_to_call_records.py  e831819c98c4_merge_retell_migration.py
backend/scripts/: enable_agent_tools.py
backend/sv_internal/: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
backend/sv_internal/frontend/income/components/: client-detail.tsx  income-stats-cards.tsx  mrr-chart.tsx  revenue-chart.tsx
backend/sv_internal/frontend/lib/api/: income.ts
backend/sv_internal/sv_internal/: __init__.py
backend/sv_internal/sv_internal/api/: __init__.py  clients.py  income.py  plugins.py
backend/sv_internal/sv_internal/models/: __init__.py  sim_client.py  sim_client_history.py  sim_income_snapshot.py
backend/sv_internal/sv_internal/services/: __init__.py  aggregation.py  seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_crm_api.py
backend/tests/test_api/: test_crm.py  test_health.py
backend/tests/test_core/: test_cache.py  test_security.py
backend/tests/test_models/: test_appointment.py  test_call_interaction.py  test_contact.py  test_user.py
backend/tests/unit/: test_security.py
docs/: SpaceVoice-Pricing-Guide-Sales.md
frontend/: .env.production.example  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vercel.json  vite.widget.config.ts  vitest.config.ts
frontend/e2e/: api-health.spec.ts  dashboard.spec.ts  fixtures.ts  phone-numbers.spec.ts
frontend/public/audio/: README.md
frontend/scripts/: diagnose-dashboard.sh  generate-demo-audio.py
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/access/[token]/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/agents/: page.tsx
frontend/src/app/dashboard/appointments/: page.tsx
frontend/src/app/dashboard/calculator/: page.tsx
frontend/src/app/dashboard/calls/: page.tsx
frontend/src/app/dashboard/clients/: page.tsx
frontend/src/app/dashboard/crm/: page.tsx
frontend/src/app/dashboard/income/: page.tsx
frontend/src/app/dashboard/integrations/: page.tsx
frontend/src/app/dashboard/phone-numbers/: page.tsx
frontend/src/app/dashboard/pricing/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/test/: page.tsx
frontend/src/app/dashboard/workspaces/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: layout.tsx  page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/: app-sidebar.tsx  embed-agent-dialog.tsx  preloader.tsx  tier-selector.tsx  top-bar.tsx
frontend/src/components/__tests__/: app-sidebar.test.tsx  tier-selector.test.tsx
frontend/src/components/landing/: case-studies.tsx  differentiation.tsx  faq.tsx  features-grid.tsx  footer.tsx  hero.tsx  how-it-works.tsx  index.ts  navbar.tsx  pricing-preview.tsx  problem-solution.tsx  roi-calculator.tsx  social-proof.tsx  testimonials.tsx  use-cases.tsx
frontend/src/components/ui/: button.tsx  card.tsx  form.tsx  input.tsx  progress.tsx  sheet.tsx
frontend/src/hooks/: use-auth.tsx
frontend/src/lib/: api.ts  integrations.ts  pricing-tiers.ts  sidebar-store.ts  utils.ts
frontend/src/lib/__tests__/: api.test.ts  integrations.test.ts  pricing-tiers.test.ts  utils.test.ts
frontend/src/lib/api/: agents.ts  calls.ts  income.ts  phone-numbers.ts  revenue.ts  telephony.ts
frontend/src/test/: setup.ts  test-utils.tsx
frontend/src/widget/: widget.ts
frontend/tests/: setup.ts
frontend/tests/mocks/: data.ts  handlers.ts
frontend/tests/utils/: test-utils.tsx
scripts/: playwright_authenticated_nav.py  playwright_debug_nav.py  playwright_nav_detailed.py  playwright_navigation_test.py  playwright_ui_audit.py  test_api_handshake.py  test_hvac_triage.py
(+19 files in other folders)
