[project]
name = "sv-internal"
version = "0.1.0"
description = "SpaceVoice internal module for client analytics"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sv_internal"]
